--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   "dependencies": {
     "express": "^4.17.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   }
 }
