--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "css-loader": "^6.6.0",
     "express": "^4.17.3",
     "pg": "^8.7.3",
     "prop-types": "^15.8.1",
@@ -44,6 +45,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "style-loader": "^3.3.1"
   }
 }
