--- a/package.json
+++ b/package.json
@@ -20,29 +20,22 @@
   },
   "homepage": "https://github.com/neovimnovum/workout-app#readme",
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/preset-env": "^7.18.6",
-    "@babel/preset-react": "^7.18.6",
-    "babel-loader": "^8.2.5",
-    "eslint": "^8.20.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.0",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.19",
     "source-map-loader": "^4.0.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "css-loader": "^6.7.1",
     "express": "^4.18.1",
     "pg": "^8.7.3",
     "prop-types": "^15.8.1",
@@ -50,7 +43,6 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "style-loader": "^3.3.1"
+    "redux-thunk": "^2.4.1"
   }
 }
