--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/server.js",
+    "start": "node server/build/server.js",
     "build": "NODE_ENV=production webpack",
-    "dev": "npx nodemon server/server.js & NODE_ENV=development webpack serve --open"
+    "dev": "NODE_ENV=development webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,17 @@
   },
   "homepage": "https://github.com/neovimnovum/workout-app#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "css-loader": "^6.7.1",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.19",
     "source-map-loader": "^4.0.0",
@@ -29,6 +39,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "webpack": "^5.73.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.3"
   },
